AIOrg/force-app/main/default/objects/Product2/fields/Child_Care_Compatible__c.field-meta.xml
<CustomField>
    <fullName>Child_Care_Compatible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Child Care Compatible</label>
    <type>Checkbox</type>
</CustomField>