AIOrg/force-app/main/default/objects/Product2/fields/Program_availibility__c.field-meta.xml
<CustomField>
    <fullName>Program_availibility__c</fullName>
    <label>Program availibility</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Afternoon</fullName>
            </value>
            <value>
                <fullName>Day time</fullName>
            </value>
            <value>
                <fullName>Early Morning</fullName>
            </value>
            <value>
                <fullName>Evenings</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Week days</fullName>
            </value>
            <value>
                <fullName>Weekends</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>