AIOrg/force-app/main/default/objects/Product2/fields/Program_Status__c.field-meta.xml
<CustomField>
    <fullName>Program_Status__c</fullName>
    <label>Program Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Offered</fullName>
            </value>
            <value>
                <fullName>No longer offered</fullName>
            </value>
            <value>
                <fullName>Temp not offered</fullName>
            </value>
            <value>
                <fullName>Seasonal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>