AIOrg/force-app/main/default/objects/Product2/fields/Target_Clients__c.field-meta.xml
<CustomField>
    <fullName>Target_Clients__c</fullName>
    <label>Target Clients</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>